--- a/bibliography.bib
+++ b/bibliography.bib
@@ -227,3 +227,20 @@ url="http://dx.doi.org/10.1007/s10107-007-0181-x"
   pages={763--776},
   year={1995}
 }
+
+% resultant
+@Inbook{Akritas1991,
+author="Akritas, Alkiviadis G.",
+editor="Meyer, Kenneth R.
+and Schmidt, Dieter S.",
+title="Sylvester's form of the Resultant and the Matrix-Triangularization Subresultant PRS Method",
+bookTitle="Computer Aided Proofs in Analysis",
+year="1991",
+publisher="Springer New York",
+address="New York, NY",
+pages="5--11",
+abstract="Sylvester's form of the resultant is often encountered in the literature but is completely different from the one discussed in this paper; the form described here can be found in Sylvester's paper of 1853 [12], and has been previously used only once, by Van Vleck [13] in the last century. Triangularizing this ``rediscovered'' form of the resultant we obtain a new method for computing a greatest common divisor (gcd) of two polynomials in Z[x], along with their polynomial remainder sequence (prs); since we are interested in exact integer arithmetic computations we make use of Bareiss's [4] integer-preserving transformation algorithm for Gaussian elimination. This new method uniformly treats both complete and incomplete prs's and, for the polynomials of the prs's, it provides the smallest coefficients that can be expected without coefficient gcd computations.",
+isbn="978-1-4613-9092-3",
+doi="10.1007/978-1-4613-9092-3_2",
+url="https://doi.org/10.1007/978-1-4613-9092-3_2"
+}
