reactive numerics sections

--- a/main.tex
+++ b/main.tex
@@ -869,10 +869,23 @@ of numerical experiments for pairwise and multi agent interactions.
     \end{algorithmic}
 \end{algorithm}
 
-% A numerical experiment suggests that the best response behvaiour is captured by our algorithm.
+Illustrated by Figure~\ref{fig:reactive_pairwise_results} are the results of the
+numerical experiments for pairwise interactions. The results suggest that the best
+response behaviour is captured by our algorithm.
 
-% The numerical methods
-% results.
+\begin{figure}
+    \centering
+    \begin{subfigure}{0.45\textwidth}
+        \centering
+        \includegraphics[width=.95\textwidth]{img/reactive_pairwise_one.pdf}
+    \end{subfigure}
+    \begin{subfigure}{0.45\textwidth}
+        \centering
+        \includegraphics[width=.95\textwidth]{img/reactive_pairwise_two.pdf}
+    \end{subfigure}
+    \caption{Numerical experiments for Algorithm~\ref{algo:reactive} for \(N=1\).}
+    \label{fig:reactive_pairwise_results}
+\end{figure}
 
 \subsection{Memory one strategies}
 
