first draft of paper + reactive script

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -244,3 +244,18 @@ isbn="978-1-4613-9092-3",
 doi="10.1007/978-1-4613-9092-3_2",
 url="https://doi.org/10.1007/978-1-4613-9092-3_2"
 }
+
+% Archetypes
+@article{Harper2017,
+    author = {Harper, Marc AND Knight, Vincent AND Jones, Martin AND Koutsovoulos, Georgios AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
+    year = {2017},
+    month = {12},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0188046},
+    pages = {1-33},
+    number = {12},
+    doi = {10.1371/journal.pone.0188046}
+}
